--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,3 +3,4 @@ cmake_minimum_required(VERSION 3.20)
 project(src) #之后是有变量可以拿到这个名字
 
 add_subdirectory(101first_cmake)
+add_subdirectory(102cmake_lib)
