Building a dynamic library using MSVC on Windows

--- a/src/102cmake_lib/CMakeLists.txt
+++ b/src/102cmake_lib/CMakeLists.txt
@@ -1,6 +1,13 @@
 cmake_minimum_required(VERSION 3.20)
 
-project(102cmake_lib)
+project(xlog)
 
-add_subdirectory(xlog)
-add_subdirectory(test_xlog)
+include_directories("xlog")
+
+# 添加xlog库编译 项目自带预处理变量xlog_EXPORTS
+
+add_library(xlog SHARED xlog/xlog.cpp xlog/xlog.h)
+
+add_executable(test_xlog test_xlog/test_xlog.cpp)
+
+target_link_libraries(test_xlog xlog)
